add cable to database

--- a/config/database.yml
+++ b/config/database.yml
@@ -85,3 +85,6 @@ production:
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
   host: <%= ENV['POSTGRES_HOST'] %>
+  cable:
+    <<: *default
+    url: <%= ENV['DATABASE_URL'] %>
