update files to match current Render docs

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: car-api
     runtime: ruby
-    buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    plan: free
+    buildCommand: './bin/render-build.sh'
+    startCommand: './bin/rails server'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -15,6 +16,8 @@ services:
         value: production
       - key: RAILS_SERVE_STATIC_FILES
         value: "true"
+      - key: WEB_CONCURRENCY
+        value: 2 # Recommended default
     healthCheckPath: /
     autoDeploy: true
 
